# EJMKD

./: .gitignore  CMakeLists.txt  README.md  compile_ejmdk.ps1
src/: main.cpp  media_foundation_video.cpp  media_foundation_video.h  quadtree_analyzer.cpp  quadtree_analyzer.h  video_types.h  vulkan_ejmdk.cpp  vulkan_ejmdk.h
src/shaders/: ejmdk.comp
tools/: embed_binary.cmake
